﻿The QA40xPlot Changelog
--------------------------------------------
This changelog shows the changes made for each version
--------------------------------------------
v 1.1.45
- support multiple file select for GET operation
- don't invert color when mouseover color boxes
v 1.1.44
- switch from scottplot scatter to signalxy plots for massive graph drawing speedup
- remove graph-limiting from spectrum and imd plots
- early support for offset in frequency response
v 1.1.43
- improve pixel tracking in the on-screen markers
- make bin-indexing consistent
- add scrollbars to right columns in tabs
v 1.1.42
- add noise bandwidth setting for thd+n and noise floor measurements
- change default bandwidth to 20KHz for most tests
- do a second gain curve for higher accuracy auto-attenuation in sweeps
- support non-qa430 use of opamp.freq test
- add right channel display to opamp test
v 1.1.41
- add index display to the Palette display
- show palette indices in the legend tooltips
- make tab headings narrower when using themes
- support |and _ for pos/neg supply delimiters in opamp test
- support multiple voltage opamp sweep
- support generator direction in opamp sweep
v 1.1.40
- replace the stock legend with a movable cleaner legend
- add a "ShowLegend" option to the tests
- add a Setting to enable the QA430 gui
- begin opamp amplitude sweep
v 1.1.39
- add Offset options to tab info
- change distortion/noise bandwidth to 1/2 octave
- improve tab info dialog box layout
- fixup palette choices for multitests
v 1.1.38
- Opamp test
 - get cursor display correct
 - add palette edit button and scrollbar
v 1.1.37
- updates to Opamp test for better variance selection
- fixup configuration to load Opamp variables
v 1.1.36
- better reflect the line color to data box for gotten data
- calculate amplitude sweep noise floor using 0 attenuator instead of 6
- early pass implementing opamp sweep tests
- add option to change attenuator safety margin
v 1.1.35