@@ -125,7 +125,7 @@
     By default L is usually clicked on when gotten. Click the L and R to show/hide each channel.
     Click the color boxes next to the L and R to change the plot line colors.
     Add more saved tests by clicking the Get button again.
-    Click the garbage icon to remove a saved tab. This will not delete the file on-disk.
+    Click the garbage can icon to remove a 'gotten' tab. This will not delete the file on-disk.
 </p>
 
 <h1>Command Buttons</h1>
